just updated the navigation to make it responsive, I want to work on it now until I can deliver and host to vercel so that I can show Rachel.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!--services drop down-->
                 <div class="megabox">
                     <div class="servicedrop" >
-                        <a class="droplink">Services <i class="bi bi-caret-down-fill"></i> </a>
+                        <div><a href="#" class="droplink">Services <i class="bi bi-caret-down-fill"></i> </a></div>
                            <div class="servicecontent">
                             <div class="row">
                                 <div class="column">
@@ -116,9 +116,13 @@
             <li><a href="#">Resources<i class="bi bi-caret-down-fill"></i> </a></li>
             <li><a href="#">Contact<i class="bi bi-caret-down-fill"></i> </a></li>
         </ul>
-    <!--Searchcantainre in the header-->
-        <div class="searchcontainer">
-            <div class="phonenumber"> <h5 class="phonesize"> <i class="fas fa-phone-volume" Id="phoneicon"></i>0706727834 </h5><div>
+
+
+        <!--Searchcantainre in the header-->
+        <div class="containerlinks">
+            <!--<div class="searchcontainer">Hey here I am </div>-->
+            <div class="phonenumber"><i class="bi bi-telephone-forward-fill" style="padding:3px"></i> 0706727834 </div>
+            <div class="hamburgermenucontainer"><a href="#" style="font-size: 3rem;"> <i class="bi bi-list" class="hamburgermenu" ></i> </a></div>             
         </div>
             
     </div>
