--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!--Searchcantainre in the header-->
         <div class="containerlinks">
             <!--<div class="searchcontainer">Hey here I am </div>-->
-            <div class="phonenumber"><i class="bi bi-telephone-forward-fill" style="padding:3px"></i> 0706727834 </div>
+            <div class="phonenumber"><a href="#" class="phoneicon" ><i class="bi bi-telephone-forward-fill" style="padding:3px"></a></i> <a href="#" class="phonenum">0706727834</a> </a></div>
             <div class="hamburgermenucontainer"><a href="#" style="font-size: 3rem;"> <i class="bi bi-list" class="hamburgermenu" ></i> </a></div>             
         </div>
             
